new content moved from live into pages + all finnish pages copied from live

--- a/aloeconditioner.html
+++ b/aloeconditioner.html
@@ -74,6 +74,7 @@ id: page-56
                         data-show-faces="true">
                 </div>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
+            </div>
         </div>
     </div>
         <div class="texture-border-bottom"></div>
