--- a/braattveta.html
+++ b/braattveta.html
@@ -36,16 +36,24 @@ id: braattveta
                 <hr class="primary" />
                 <p>Ett body butter är just som namnet låter påskina, ett nästan 100-procentigt fett. Dr Hardmans body butters innehåller bara för huden viktiga ingredienser, och ibland växtextrakt eller eteriska oljor som dofttillsats. De flesta dofterna kommer dock från huvud&shy;ingredienserna som t.ex. kakaosmöret.
                     <br>Eftersom Hardmans body butters inte innehåller kemikalier som stabiliserar produktens konsistens så reagerar de på omgivningens temperatur. Jämför t.ex ett matfett som smör. Smör smälter i solen och blir väldigt hårt i kylskåp. Likaså Dr Hardmans body butters.</p>
+
+                <div class="row hidden-sm-up">
+                    <div class="col-xs-12">
+                        <a href="/citrusbodybutter"><img class="img-fluid mx-auto profilbild padding" src="/img/hardman_no23_citrusbodybutter.jpg" alt="DrHardman citrus body butter"></a>
+                    </div>
+                </div>
+                <a href="/citrusbodybutter"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/hardman_no23_citrusbodybutter.jpg" alt="DrHardman citrus body butter"></a>
+
                 <p>Alla våra body butters är vispade. Detta gör konsistensen användarvänlig och produkten lättbredd i rumstemperatur 17-22°C. Ett vispat body butter innehåller luft, liksom vispad grädde, och väger följaktligen mindre än en ovispad produkt.
                     <br>Eftersom Dr Hardmans alla produkter är fria från konserveringsmedel, säljer vi produkterna i sådana mängder, att de beräknas ta slut inom 2 månader vid daglig användning.
                     <br>Om du inte använder ditt body butter varje dag, är det bra att förvara det i kylskåp. Kom i så fall ihåg att ta ut produkten för uppvärmning till rumstemperatur i god tid före användning.</p>
                 <p>Ett body butter som kommit åt att smälta i ett för varmt badrum/ varm bil, har inte gått förlorat! Du kan fortsätta att använda den så länge produktens doft är oförändrad och perioden av överhettning kort. Luktar produkten illa, bör den slängas!</p>
                 <p><strong>Dr Hardmans body butters:</strong>
-                    <br><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Butter</a>
-                    <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
-                    <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
-                    <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
-                    <br><a href="/no26-rosebodybutter">No 26 Rose Body Butter</a></p>
+                    <br><a href="/sheabodybutter">No 22 Calming Shea Butter</a>
+                    <br><a href="/citrusbodybutter">No 23 Citrus Body Butter</a>
+                    <br><a href="/cocoabodybutter">No 24 Cocoa Body Butter</a>
+                    <br><a href="/mangobodybutter">No 25 Mango Body Butter</a>
+                    <br><a href="/rosebodybutter">No 26 Rose Body Butter</a></p>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
                 <p><br></p>
                 <a name="jumptarget" id="konserveringsmedel"></a>
@@ -73,6 +81,12 @@ id: braattveta
                 <h1>Om fyto&shy;aromatiska oljor</h1>
                 <hr class="primary" />
                 <p>Dr Hardmans fytoaromatiska oljor är inte som din vanliga ansiktsolja. Våra koncentrerade ansiktsoljeserum är utformade för att ge näring åt huden samtidigt som de stöder behandling av specifika problem. Med vegetabiliska oljor och organiska botaniska extrakt av högsta kvalitet ger fytoboostern dig en kraftfull dos av näringsämnen och vitaminer samt en delikat arom.</p>
+                <div class="row hidden-sm-up">
+                    <div class="col-xs-12">
+                        <a href="/youthfulglow"><img class="img-fluid mx-auto profilbild padding" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
+                    </div>
+                </div>
+                <a href="/youthfulglow"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
                 <h3>Fytoaromatiska ansiktosoljor kan användas på många olika sätt:</h3>
                 <ul><li><strong>Som en potent hudkräm</strong> - ansiktsoljorna kan appliceras direkt på huden, på ansikte och hals precis som en vanlig hudkräm. Lätta och silkeslena absorberas de snabbt av huden och lämnar den mjuk och smidig.</li>
                     <li><strong>Som vitamin-boost för någon annan kosmetisk produkt</strong> - Dr Hardmans ansiktsoljor är rika på vitaminer och vikiga näringsämnen och kan användas som tillskott för att förbättra egenskaperna hos i stort sett alla masker, krämer och lotioner. Den behagliga aromen från ansiktsoljorna kan också användas som aromterapi blandade i doftfria produkter.</li>
@@ -97,10 +111,10 @@ id: braattveta
                 <p>Endel användare kan uppleva att håret blir klibbigt av bitschampo då de påbörjar användningen. Ge inte upp! Klibbigheten bör försvinna efter ett par tre tvättar då håret vant sig med produkten. Shampobiten är en superprodukt med tusentals nöjda användare också i Finland! Ge den en chans!</p>
                 <div class="row hidden-sm-up">
                     <div class="col-xs-12">
-                        <img class="img-fluid mx-auto profilbild padding" src="/img/BBshampoobar500circleSingle.png">
+                        <a href="/shampoobar"><img class="img-fluid mx-auto profilbild padding" src="/img/BBshampoobar500circleSingle.png" alt="citrus shampoobar"></a>
                     </div>
                 </div>
-                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/BBshampoobar500circleSingle.png">
+                <a href="/shampoobar"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/BBshampoobar500circleSingle.png" alt="citrus shampoobar"></a>
                 <h3>Såhär använder du schampo i bit:</h3>
                 <p>Blöt håret noggrant med varmt vatten (skummet blir bättre i varmt vatten), och blöt också schampobiten. Gnid schampobiten mot håret så länge att skummet är rikt överallt. Se till att du får ordentligt med lödder i nacken, särskilt om du har långt hår. Tillsätt lite varmt vatten i håret, om det känns som att löddret inte vill ta sig. Du kan också göra en kort mellansköljning och löddra upp igen, om det känns som det skulle behövas. <br>Då löddret är rikt, massera hårbotten ren med fingertopparna och skölj därefter håret noggrannt med varmt vatten. Handdukstorka och tillsätt balsam eller annan vårdprodukt vid behov.</p>
                 <p>Förvara din schampobit som en vanlig bit tvål på ett luftigt underlag där vatten rinner av väl.</p>
@@ -124,7 +138,14 @@ id: braattveta
                     <li>Om schampobiten förvaras i konstant väldigt fuktiga eller varma utrymmen (t.ex. utebastun där tvättrum/bastu finns allt i ett) kan schampobiten bli väldigt mjuk och till sist smälta.</li>
                     <li>Passar inte så bra för starkt färgade hår. Färgen tvättas ur fortare, och färgat hår kan behöva ett mer vårdande schampo.</li>
                 </ul>
-                    <h3>Om schampobiten lämnar håret klibbigt, hur får jag det att fungera?</h3>
+                <div class="row hidden-sm-up">
+                    <div class="col-xs-12">
+                        <a href="/shampoobar"><img class="img-fluid mx-auto profilbild padding" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
+                    </div>
+                </div>
+                <a href="/shampoobar"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
+
+                <h3>Om schampobiten lämnar håret klibbigt, hur får jag det att fungera?</h3>
                 <p>När du börjar använda schampobiten kan ditt hår kännas klibbigt. Detta är en effekt av hårtyp, behandlingar, tidigare hårvårdsprodukter etc.<br>
                     För endel människor fungerar produkten perfekt omedelbart, medan andra kan få tvätta många gånger innan det känns bra. Behandlat hår är mer poröst och tvålrester kan lättare fastna i det och göra att det känns klibbigt.</p>
                 <p>Instruktioner för att stävja denna klibbighet:<br>
@@ -157,9 +178,9 @@ id: braattveta
                 <p>Nedan listat Dr Hardmans produkter där också alla mikroingredsienser är fria från konserveringsmedel:</p>
                 <ul class="">
                     <li> <a href="/pitstopregular">No 10 Pit Stop Regular Deodorant</a> </li>
-                     <li><a href="/no22-calmingsheabodybutter">No 22 Shea Body Butter</a> </li>
-                     <li><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a> </li>
-                     <li><a href="/no26-rosebodybutter"> No 26 Rose Body Butter</a> </li>
+                     <li><a href="/sheabodybutter">No 22 Shea Body Butter</a> </li>
+                     <li><a href="/cocoabodybutter">No 24 Cocoa Body Butter</a> </li>
+                     <li><a href="/rosebodybutter"> No 26 Rose Body Butter</a> </li>
                      <li><a href="/serendipity">No 32 Serendipity Face Oil</a> </li>
                      <li><a href="/agedefence">No 44 Age Defence Cream</a> </li>
                      <li><a href="/pawsandclawsraw">No 47 Paws and Claws Raw</a> </li>
@@ -183,10 +204,10 @@ id: braattveta
                 <hr class="primary" />
                 <div class="row hidden-sm-up">
                     <div class="col-xs-12">
-                        <img class="img-fluid mx-auto  profilbild padding" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png">
+                        <a href="/no80-gentle-face-wash-powder"><img class="img-fluid mx-auto  profilbild padding" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png" alt="Dr Hardman's Gentle Face Wash Powder"></a>
                     </div>
                 </div>
-                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png">
+                <a href="/no80-gentle-face-wash-powder"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png" alt="Dr Hardman's Gentle Face Wash Powder"></a>
                 <p>Muslinduken är en duk i 100% bomull avsedd för ansiktsrengöring. Namnet härrör sig från sättet duken är vävd på. Muslinduken förbättrar resultatet vid hudrengöring då den är aningen grov och försiktigt exfolierar huden. Med en duk kommer du också åt besvärliga ställen bättre och kan lättare rengöra dessa, som t.ex. näsvingar och hårfäste. Duken lämpar sig för alla hudtyper, men pga sin ringa grovhet rekommenderas den inte för det känsliga området runt ögonen eller mycket känslig hud.
                 </p>
                 <p>Användning:
@@ -207,17 +228,22 @@ id: braattveta
                 <a name="jumptarget" id="drlottahardman"></a>
                 <h1>Om Dr Lotta Hardman</h1>
                 <hr class="primary" />
-                    <div class="row hidden-sm-up">
+                    <!--<div class="row hidden-sm-up">
                         <div class="col-xs-12">
-                            <img class="img-fluid mx-auto  profilbild padding" src="/img/Drlottahardman.png">
+                            <img class="img-fluid mx-auto  profilbild padding" src="/img/Drlottahardman.png" alt="Dr Lotta Hardman's face">
                         </div>
                      </div>
-                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/Drlottahardman.png">
-                <h3>Lotta Hardman Fil.Dr.</h3>
+                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/Drlottahardman.png" alt="Dr Lotta Hardman's face">-->
+
+                <p><a target="_blank" href="https://raseborg.place2go.fi/story/dr-hardman-bytte-maskars-genetik-mot-kramkok">Läs artikeln "Dr Hardman bytte maskar mot kräm" (publicerad på Place2Go, 18.12.2018 @ raseborg.place2go.fi )</a></p>
+
                 <p>Doktor i genetik och populations&shy;biologi från Helsingfors Universitet, magister i cellbiologi från Åbo Akademi med kemi och biokemi som biämnen.
                 <br>Jobbar just nu som webutvecklare på <a target="_blank" href="http://www.jco.fi">JCO Digital</a> i Ekenäs och tillverkar Dr Hardmans hudkrämer på min fritid.</p>
                 <p>Sökte länge utan resultat efter hud- och hårvårdsprodukter utan extra kemikalietillsats. Även ekologiska hudvårdsprodukter tillverkade i Skandinavien innehåller emulgerings- och konserveringsmedel. Jag vill använda färska hudvårdsprodukter av högsta kvalitet utan extra kemikaliebelastning. Fanns inget att köpa, så tillverkade dem själv! Jag vet att andra också delar mitt intresse och gärna använder Dr Hardmans produkter. Huden är ditt största organ. Ge den ren mat!</p>
-                <h3>CLEAN FOOD FOR HEALTHY SKIN!</h3>
+
+                <img class="img-fluid mx-auto padding" src="/img/Drlottahardman_goats.jpg" alt="Lotta Hardman och geten Per">
+                <p class="small">Bild: Janica Söderlund/<a target="_blank" href="http://www.mrmedia.fi/se/"><span class="small">MrMedia</span></a></p>
+
                 <div
                         class="fb-like"
                         data-share="true"
@@ -225,9 +251,10 @@ id: braattveta
                         data-show-faces="true">
                 </div>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
+            </div>
         </div>
     </div>
-        <div class="texture-border-bottom"></div>
+    <div class="texture-border-bottom"></div>
 </section>
 <section class="padding">
     <div class="container">
