--- a/fi/no55-shampoobar.html
+++ b/fi/no55-shampoobar.html
@@ -58,6 +58,7 @@ comments: true
                         <br><sup>◆</sup> Jalostamaton (raw) aines
                     </p>
                 </div>
+                <img class="img-fluid mx-auto padding" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar">
             </div>
 
             <div class="col-lg-6">
