--- a/lipbalm.html
+++ b/lipbalm.html
@@ -10,7 +10,7 @@ id: page-70
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="img/BBlappomada500.png">
+                <img class="img-fluid mx-auto produktprofilbild" src="/img/BBlappomada500.png">
             </div>
             <div class="col-lg-6">
                 <h1 class="pt-3">No 70 Vanilla-Choko Lip Balm</h1>
@@ -70,10 +70,10 @@ id: page-70
                 <p>Dr Hardmans läppomada säljs numera enbart som stift emedan de är mer hygieniska och lättare att breda på. Med Dr Harmans läppomada behöver du inte oroa dig över att du äter en del av ditt läppfett. Alla ingredienser är ätbara! Kakaosmöret är samma som används i choklad och andra livsmedel, liksom vaniljoljan. Ricinolja och lanolin = (fårfett) samt vitamin E är också ätligt, om än inte rekommenderat som föda.
                 <br>Kasta petrolater och parabener! Njut av ren mat för dina läppar med skyddande och närande ingredienser.</p>
                 <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="lipbalmvitamin.html">No 71 Vitamin Tangerine Lip Balm</a>
-                    <br><a href="pawsandclawsraw.html">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
-                    <br><a href="pawsandclawslavender.html">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
-                    <br><a href="pawsandclawsvanilla.html">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
+                    <br><a href="/lipbalmvitamin">No 71 Vitamin Tangerine Lip Balm</a>
+                    <br><a href="/pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
+                    <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
+                    <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
                 <div
                         class="fb-like"
