--- a/no67-cleansing-and-hydrating-face-mask.html
+++ b/no67-cleansing-and-hydrating-face-mask.html
@@ -3,6 +3,7 @@ layout: page
 type: produkter
 title: Cleansing and hydrating face mask powder
 comments: true
+id: page-67
 ---
 
 <section class="padding">
