--- a/no68-tight-and-bright-face-mask.html
+++ b/no68-tight-and-bright-face-mask.html
@@ -3,6 +3,7 @@ layout: page
 type: produkter
 title: Tight and bright face mask powder
 comments: true
+id: page-68
 ---
 
 <section class="padding">
