--- a/shampoobar.html
+++ b/shampoobar.html
@@ -3,6 +3,7 @@ layout: page
 type: produkter
 title: Shampoo Bar Citrus
 comments: true
+id: page-55
 ---
 
 <section class="padding">
@@ -57,6 +58,7 @@ comments: true
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
                 </div>
+                <img class="img-fluid mx-auto padding" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar">
             </div>
 
             <div class="col-lg-6">
