--- a/fi/hyvatietaa.html
+++ b/fi/hyvatietaa.html
@@ -35,6 +35,12 @@ title: Hyvä tietää
                 <hr class="primary" />
                 <p>Body butterit ovat juuri sitä miltä kuulostavatkin - lähes 100 %:sti rasvaa. Dr Hardmanin body butterit sisältävät iholle tärkeitä ainesosia, joskus kasvisuutteita sekä tuoksuvia eteerisiä öljyjä. Useimmat tuoksut tulevat kuitenkin suoraan pääraaka-aineista kuten esimerkiksi kaakaovoista.
                     <br>Koska Dr Hardmanin body butterit eivät sisällä kemikaaleja, jotka tasapainottavat tuotteiden koostumusta, reagoivat tuotteet herkästi ympäristön lämpötilaan. Vertaa body butteria esimerkiksi voihin. Voi sulaa auringonpaisteessa ja kovettuu kovaksi jääkaapissa. Samalla tavalla reagoivat Dr Hardmanin body butterit.</p>
+                <div class="row hidden-sm-up">
+                    <div class="col-xs-12">
+                        <a href="/fi/no23-citrus-body-butter"><img class="img-fluid mx-auto profilbild padding" src="/img/hardman_no23_citrusbodybutter.jpg" alt="DrHardmanin citrus body butter"></a>
+                    </div>
+                </div>
+                <a href="/fi/no23-citrus-body-butter"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/hardman_no23_citrusbodybutter.jpg" alt="DrHardman citrus body butter"></a>
                 <p>Kaikki Dr Hardmanin body butterit ovat vispattuja. Tämä tekee tuotteen koostumuksesta miellyttävän ja helposti levittyvän (huoneenlämpö 17-22°C). Vispattu body butter sisältää ilmaa, kuten vispattu kermakin, ja näin ollen painaa myös huomattavasti vähemmän kuin vispaamaton tuote.
                     <br>Koska kaikki Dr Hardmanin tuotteet ovat säilöntäaineettomia, myydään tuotteita sellaisilla volyymeilla, että niiden arvellaan olevan loppuunkäytetyt (päivittäisessä käytössä) noin kahden kuukauden sisällä. Säilytä body butterisi jääkaapissa, jos et käytä tuotetta päivittäin. Muista ottaa tuote ajoissa huoneenlämpöön, jotta sitä on helppo ja miellyttävä levittää.
                     <br>Jos body butterisi on vahingossa sulanut liian lämpimässä kylpyhuoneessa tai autossa, älä huoli! Voit käyttää tuotetta vielä, jos ylikuumenemisaika on ollut lyhyt ja jos tuotteen tuoksu on säilynyt ennallaan. Jos body butter haisee pahalle, tulee se heittää pois!<p>
@@ -62,7 +68,7 @@ title: Hyvä tietää
                 <h1>Emulgointiaineet ja stabilointiaineet</h1>
                 <hr class="primary" />
                 <p>Emulgointiaine on ns. pinta-aktiivinen aine, jolla on kyky vähentää pintajännitystä kahden keskenään sekoittumattoman aineen välillä. Emulgointiaineen avulla toisen aineen pienet pisarat saadaan jakautumaan toiseen aineeseen pysyvästi. Jos molemmat ainesosat ovat nesteitä, esimerkiksi öljyä ja vettä, lopputulosta kutsutaan emulsioksi.
-                    <br>Dr Hardmanin tuotteet sisältävät hyvin vähän tai ei lainkaan vettä. Tästä syystä emulgointiaineet ovat tarpeettomia useimmissa tuotteissa . Melkein kaikki vähittäiskaupan kosteusvoiteet sisältävät vettä yli 50%. Tästä esimerkistä on helppo ymmärtää emulgointiaineen tarpeellisuus. Dr Hardmanin tuotteissa käytetty mehiläisvaha  toimii muiden hyötyjen ohessa luonnollisena emulgaattorina kasvovoiteissa ja huulirasvoissa.</p>
+                    <br>Dr Hardmanin tuotteet sisältävät hyvin vähän tai ei lainkaan vettä. Tästä syystä emulgointiaineet ovat tarpeettomia useimmissa tuotteissa. Melkein kaikki vähittäiskaupan kosteusvoiteet sisältävät vettä yli 50%. Tästä esimerkistä on helppo ymmärtää emulgointiaineen tarpeellisuus. Dr Hardmanin tuotteissa käytetty mehiläisvaha  toimii muiden hyötyjen ohessa luonnollisena emulgaattorina kasvovoiteissa ja huulirasvoissa.</p>
                 <p>Stabilointiaineet sitovat voiteen ainesosat yhteen ja kiinteyttävät sen koostumusta. Mehiläisvaha auttaa tähänkin.</p>
                 <p>Dr Hardmanin tuotteissa ei käytetä lainkaaan emulgointiaineita tai stabilointiaineita, joista ihosi ei hyödy. Kaikki meidän voiteet ovat hyvin ravinnetiheitä  verrattuna vähittäiskaupan vastaaviin tuotteisiin. Meiltä saat ainoastaan ihollesi tarpeellisia ja ravitsevia aineksia.
                     <br>Käytä siis Dr Hardmanin voiteita säästeliäästi!</p>
@@ -71,7 +77,15 @@ title: Hyvä tietää
                 <a name="jumptarget" id="phytoboosters"></a>
                 <h1>Fytoaromaattiset öljyt</h1>
                 <hr class="primary" />
-                <p>Dr Hardmanin fytoaromaattiset öljyt eivät ole mitä tahansa kasvoöljyjä vaan tiivistettyä öljyseerumia . Kasvoöljyt ravitsevat ihoa samalla ehkäisten iho-ongelmia. Dr Hardmanin vegaaninen seerumi on öljyjen ja orgaanisten korkealaatuisten kasviuutteiden yhdistelmä. Seerumi antaa iholle vahvan annoksen ravintoaineita sekä vitamiineja ja tuoksu on taivaallisen ihana!</p>
+                <p>Dr Hardmanin fytoaromaattiset öljyt eivät ole mitä tahansa kasvoöljyjä vaan tiivistettyä öljyseerumia. Kasvoöljyt ravitsevat ihoa samalla ehkäisten iho-ongelmia. Dr Hardmanin vegaaninen seerumi on öljyjen ja orgaanisten korkealaatuisten kasviuutteiden yhdistelmä. Seerumi antaa iholle vahvan annoksen ravintoaineita sekä vitamiineja ja tuoksu on taivaallisen ihana!</p>
+
+                <div class="row hidden-sm-up">
+                    <div class="col-xs-12">
+                        <a href="/fi/no31-youthfulglow-face-oil"><img class="img-fluid mx-auto profilbild padding" src="/img/hardman_faceoils.jpg" alt="DrHardmanin kasvoöljyt"></a>
+                    </div>
+                </div>
+                <a href="/fi/no31-youthfulglow-face-oil"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/hardman_faceoils.jpg" alt="DrHardman ansiktsoljor"></a>
+
                 <h3>Fytoaromaattisille öljyille löytyy monta eri käyttötapaa:</h3>
                 <ul><li><strong>Tehokkaana ihovoiteena</strong> - kasvoöljyjä voi käyttää suoraan iholle, kasvoille tai kaulalle aivan kuten tavallisia ihovoiteita. Kevyen ja silkinpehmeän ominaisuutensa ansiosta imeytyvät ne nopeasti ihoon ja jättävät ihon ihanan pehmeäksi ja joustavaksi.</li>
                     <li><strong>Jonkun toisen tuotteen vitamiini-boostina</strong> - Dr Hardmanin kasvoöljyt ovat erittäin vitamiini- ja ravinnepitoisia. Öljyt sopivat hyvin käytettäväksi yhdessä muiden tuotteiden kanssa täydentämään ja parantamaan niiden ominaisuuksia (esim. kasvonaamiot ja voiteet).</li>
@@ -97,10 +111,10 @@ title: Hyvä tietää
                     <br>Shampoopala on supertuote, jolla on jo tuhansia tyytyväisiä käyttäjiä Suomessa. Kokeile ihmeessä sinäkin!</p>
                 <div class="row hidden-sm-up">
                     <div class="col-xs-12">
-                        <img class="img-fluid mx-auto profilbild padding" src="/img/BBshampoobar500circleSingle.png">
+                        <a href="/fi/no55-shampoobar"><img class="img-fluid mx-auto profilbild padding" src="/img/BBshampoobar500circleSingle.png"></a>
                     </div>
                 </div>
-                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/BBshampoobar500circleSingle.png">
+                <a href="/fi/no55-shampoobar"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/BBshampoobar500circleSingle.png"></a>
                 <h3>Käytä shampoopalaa näin:</h3>
                 <p>Kastele hiuksesi huolellisesti lämpimällä vedellä (vaahtoa syntyy paremmin lämpimässä  vedessä), ja kastele hiukan palaa. Hiero palaa hiuksiin niin kauan, että vaahtoa on runsaasti joka puolella hiuksia. Vaahdota huolella myös niska, etenkin, jos sinulla on pitkät hiukset. Lisää tarvittaessa kesken vaahdotuksen hiukan lämmintä vettä hiuksiin, jos vaahdotus ei tunnu lähtevän käyntiin. Voit myös tehdä lyhyen välihuuhtelun ja vaahdottaa uudelleen tarvittaessa. Kun vaahtoa on runsaasti hiuksissa, hiero hiuspohja sormin puhtaaksi. Tämän jälkeen huuhtele hiukset lämpimällä vedellä huolellisesti. Pyyhekuivaa ja lisää hoitotuote tarvittaessa.</p>
                 <p>Säilytä shampoopalaa samaan tapaan kuin palasaippuoita, eli alustalla, mistä vesi pääsee pois. Tähän tarkoitukseen sopivat ilmavat saippua-alustat, seinään asennettavat korit, verkkopussit tms.</p>
@@ -124,7 +138,14 @@ title: Hyvä tietää
                     <li>Jos shampoopala säilytetään  jatkuvasti lämpimässä tai hyvin kosteassa tilassa (kuten esim. kesäsauna) palasta voi tulla hyvin pehmeä ja lopuksi se saattaa sulaa.</li>
                     <li>Vahvasti värjätyt hiukset voivat haalistua nopeammin.</li>
                 </ul>
-                    <h3>Jos shampoopala jättää hiukset tahmaisiksi  miten saan sen toimimaan?</h3>
+                <div class="row hidden-sm-up">
+                    <div class="col-xs-12">
+                        <a href="/fi/no55-shampoobar"><img class="img-fluid mx-auto profilbild padding" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
+                    </div>
+                </div>
+                <a href="/fi/no55-shampoobar"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/hardman_no55_shampoobar.jpg" alt="DrHardman shampoobar"></a>
+
+                <h3>Jos shampoopala jättää hiukset tahmaisiksi  miten saan sen toimimaan?</h3>
                 <p>Kun aloitat shampoopalan käytön, saattaa hiuksesi tuntua tahmaisilta. Tämä voi  johtua hiuslaadustasi, aikaisemmista käsittelyistä ja käyttämistäsi hiustenhoitotuotteista.
                     <br>Osalla käyttäjistä tuote toimii erinomaisesti heti ja toiset saattavat joutua käyttämään tuotetta useamman kerran ennen kuin se tuntuu hyvälle. Käsitellyt hiukset ovat huokoisemmat ja niihin jää helposti saippuajäämiä. Tästä johtuen hiukset saattavat tuntua tahmaisilta.</p>
                 <p>Näin taltutat tahmaisuuden tunteen:
@@ -186,10 +207,10 @@ title: Hyvä tietää
                 <hr class="primary" />
                 <div class="row hidden-sm-up">
                     <div class="col-xs-12">
-                        <img class="img-fluid mx-auto  profilbild padding" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png">
+                        <a href="/fi/no80-gentle-face-wash-powder"><img class="img-fluid mx-auto  profilbild padding" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png"></a>
                     </div>
                 </div>
-                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png">
+                <a href="/fi/no80-gentle-face-wash-powder"><img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/DrHardmans_No80_Gentle_Face_Wash_Powder.png"></a>
                 <p>Musliiniliina on valmistettu 100 % puuvillasta ja sen nimi musliini tarkoittaa kankaan sidontatapaa. Kasvojen puhdistukseen tarkoitettu musliiniliina on hieman karkea, joten se kuorii ihoa hellävaraisesti ja tehostaa ihon puhdistamista. Sen avulla myös hankalat paikat, kuten nenänpielet ja hiusraja, on helppo puhdistaa. Liina sopii kaikille ihotyypeille, mutta sen pienestä karkeudesta johtuen sitä ei suositella herkälle silmänympärysiholle eikä erittäin herkkäihoisille.</p>
                 <p>Käyttö:
                     <br>Levitä puhdistusaine kasvoille. Pyyhi meikki ja lika hellästi pyörivin liikkein kasvoilta lämpimällä vedellä kostutetulla liinalla. Voit tarvittaessa huuhtaista liinaa välillä. Liinalla pesun jälkeen kannattaa aina käyttää kasvovettä viimeistelemään puhdistus. Toimii hyvin myös öljypuhdistusaineen kanssa. Käytön jälkeen puhdista liina ja laita kuivumaan. 3-4 käyttökerran jälkeen suositellaan liinan konepesua 40 asteessa. Liinan voi myös halutessaan laittaa kiehuvaan veteen desinfioitumaan. Jos liinaa käyttää päivittäin kannattaa hankkia 2-3 kappaletta, jotta käytössä on aina puhdas liina.
@@ -210,19 +231,13 @@ title: Hyvä tietää
                 <a name="jumptarget" id="drlottahardman"></a>
                 <h1>Kuka on FT Lotta Hardman?</h1>
                 <hr class="primary" />
-                    <div class="row hidden-sm-up">
-                        <div class="col-xs-12">
-                            <img class="img-fluid mx-auto  profilbild padding" src="/img/Drlottahardman.png">
-                        </div>
-                     </div>
-                <img class="img-fluid pull-right profilbild padding hidden-xs-down" src="/img/Drlottahardman.png">
-                <h3>Lotta Hardman FT</h3>
-                <p>Genetiiikan ja populaatiobiologian tohtori Helsingin Yliopistosta. Solubiologian maisteri Åbo Akademista, kemia ja biokemia sivuaineena.
+                <p><a target="_blank" href="https://raasepori.place2go.fi/tarina/matojen-genetiikka-vaihtui-voiteisiin">Lue artikkeli "Matojen genetiikka vaihtui voiteisiin" (julkaistu Place2Go, 18.12.2018 @ raasepori.place2go.fi )</a></p>
+                <p>Olen genetiiikan ja populaatiobiologian tohtori Helsingin Yliopistosta. Solubiologian maisteri Åbo Akademista, kemia ja biokemia sivuaineena.
                   <br>Työskentelen tällä hetkellä web-kehittäjänä  <a target="_blank" href="http://www.jco.fi">JCO Digitalissa</a> Tammisaaressa ja kehitän Dr Hardmanin ihonhoitotuotteita vapaa-ajallani.</p>
                 <p>Etsin pitkään ihonhoitotuotteita, joissa ei olisi ylimääräistä kemikaalikuormitusta, tuloksetta. Myös Pohjoismaiset (teolliset) luonnonmukaiset ihonhoitotuotteet sisältävät emulgointi- ja säilöntäaineita. Haluan hoitaa ihoani tuoreilla korkealaatuisilla ihonhoitotuotteilla ilman ylimääräisiä lisäaineita. Sellaisia ei ollut tarjolla, joten päätin kehittää niitä itse! Tiedän, että muutkin jakavat kiinnostukseni kohteen ja käyttävät mielellään Dr Hardmanin tuotteita.</p>
-
-                <h3>Ihosi on suurin elimesi. Anna sille hyvää puhdasta ruokaa!</h3>
-
+                <p>Ihosi on suurin elimesi. Anna sille hyvää puhdasta ruokaa!</p>
+                <img class="img-fluid mx-auto padding" src="/img/Drlottahardman_goats.jpg" alt="Lotta Hardman ja vuohi Per">
+                <p class="small">Kuva: Janica Söderlund/<a target="_blank" href="http://www.mrmedia.fi/fi/"><span class="small">MrMedia</span></a></p>
                 <div
                         class="fb-like"
                         data-share="true"
@@ -230,6 +245,7 @@ title: Hyvä tietää
                         data-show-faces="true">
                 </div>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Ylös</a>
+            </div>
         </div>
     </div>
         <div class="texture-border-bottom"></div>
