--- a/fi/no56-aloe-conditioner.html
+++ b/fi/no56-aloe-conditioner.html
@@ -73,6 +73,7 @@ comments: true
                         data-show-faces="true">
                 </div>
                 <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Ylös</a>
+            </div>
         </div>
     </div>
         <div class="texture-border-bottom"></div>
