1/2 av sidorna fixade -svenska

--- a/aloeconditioner.html
+++ b/aloeconditioner.html
@@ -5,77 +5,69 @@ title: Aloe Vera Spray Conditioner
 comments: true
 id: page-56
 ---
-
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No56_Aloe_Vera_Conditioner.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 56 Aloe Vera Spray Conditioner</h1>
-                <h3>Leave-in balsam för återställandet av hårets naturliga pH, vårdar, när och motverkar hårlossning. Passar alla hårtyper.<br>Sprayflaska, 100ml.</h3>
-                <h1 class="pris">9,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 90 kr.</p>
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">One day I tell her...<br>I love her hair</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
+<article class="padding grey">
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
-                    <h4>BRA FÖR:</h4>
-                    <ul class="ingredienslista">
-                        <li>Hjälper mot torr kliande hårbotten</li>
-                        <li>Återställer hårets och skalpens naturliga pH</li>
-                        <li>Reder ut trassligt hår</li>
-                        <li>Motverkar mjäll</li>
-                        <li>Motverkar hårlossning</li>
-                        <li>Reparerar ytskiktet på hårstrån (cuticle)</li>
-                        <li>Motverkar klibbigt hår efter användning av schampo på bit</li>
-                        <li>VEGAN</li>
-                    </ul>
-                    <h4>INGREDIENSER:</h4>
-                    <p>
-                        <a href="/ingredienser">aloe vera juice° (pulver° + sterilt vatten)</a>
-                        <a href="/ingredienser">trollhasselvatten°,</a>
-                        <a href="/ingredienser">glycerin°</a>
-                        <a href="/ingredienser">äppelcidervinäger°*<sup>◆</sup> </a>
-                        <a href="/ingredienser">extrakt av grönt te,</a>
-                        <a href="/ingredienser">extrakt av hampa°</a>
-                        <a href="/ingredienser">rosenträ och pepparmynta eteriska oljor</a>
-                    </p>
-
-                    <p>° Ekologisk
-                        <br>* Rättvis handel
-                        <br><sup>◆</sup> Oraffinerad (raw) råvara
-                    </p>
+    <header><h1 class="">No 56 Aloe Vera Spray Conditioner</h1></header>
+    <p>Leave-in balsam för återställandet av hårets naturliga pH, vårdar, när och motverkar hårlossning. Passar alla
+        hårtyper.<br>Sprayflaska, 100ml.</p>
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="img-fluid" src="/img/DrHardmans_No56_Aloe_Vera_Conditioner.png"
+                         alt="Dr Hardman No56 Aloe Vera Spray Hair Conditioner">
                 </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
-                <hr class="primary" />
-                <p>Aloe vera spray balsam med organiskt glycerin och extrakt av hampa för bättre vård och skydd mot håravfall. Hjälper reda ut trassligt hår och ger håret en hälsosam glans och lyster. Renar hårbotten och stimulerar hårtillväxt. Tar bort rester av schamponeringen ur håret och återställer hårets och hårbottens naturliga pH. Spraya i handukstorrt hår och skölj inte ur. Passar alla hårtyper. Skaka flaskan före användning. Använd efter varje tvätt med <a href="/shampoobar">Dr Hardmans No. 55 schampo i bit</a> eller så ofta det behövs.</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/shampoobar">No 55 Shampoo Bar Citrus</a>
-                </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
+                <div class="flip-card-back">
+                    <img class="img-fluid" src="/img/DrHardmans_No56_Aloe_Vera_Conditioner.png"
+                         alt="Dr Hardman No56 Aloe Vera Spray Hair Conditioner">
                 </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
             </div>
         </div>
-    </div>
-        <div class="texture-border-bottom"></div>
-</section>
+    </figure>
+
+    <h2 class="pris">9,00 € *</h2>
+    <p class="small">* Rekopris. I Sverige 90 kr.</p>
+
+
+    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
+    <h3>BRA FÖR</h3>
+    <ul class="ingredienslista">
+        <li>Hjälper mot torr kliande hårbotten</li>
+        <li>Återställer hårets och skalpens naturliga pH</li>
+        <li>Reder ut trassligt hår</li>
+        <li>Motverkar mjäll</li>
+        <li>Motverkar hårlossning</li>
+        <li>Reparerar ytskiktet på hårstrån (cuticle)</li>
+        <li>Motverkar klibbigt hår efter användning av schampo på bit</li>
+        <li>VEGAN</li>
+    </ul>
+    <h3>INGREDIENSER</h3>
+    <p class="ingredienser">
+        aloe vera juice° (pulver° + sterilt vatten)
+        trollhasselvatten°,
+        glycerin°
+        äppelcidervinäger°*<sup>◆</sup>
+        extrakt av grönt te,
+        extrakt av hampa°
+        rosenträ och pepparmynta eteriska oljor
+    </p>
+
+    <p class="small">° Ekologisk
+        <br>* Rättvis handel
+        <br><sup>◆</sup> Oraffinerad (raw) råvara
+    </p>
+
+    <h2 class="om">Om denhär produkten</h2>
+    <hr class="primary"/>
+    <p>Aloe vera spray balsam med organiskt glycerin och extrakt av hampa för bättre vård och skydd mot håravfall.
+        Hjälper reda ut trassligt hår och ger håret en hälsosam glans och lyster. Renar hårbotten och stimulerar
+        hårtillväxt. Tar bort rester av schamponeringen ur håret och återställer hårets och hårbottens naturliga pH.
+        Spraya i handukstorrt hår och skölj inte ur. Passar alla hårtyper. Skaka flaskan före användning. Använd efter
+        varje tvätt med <a href="/shampoobar">Dr Hardmans No. 55 schampo i bit</a> eller så ofta det behövs.</p>
+    <h4>Dr Hardmans liknande produkter</h4>
+    <p><a href="/shampoobar">No 55 Shampoo Bar Citrus</a>
+    </p>
