--- a/serendipity.html
+++ b/serendipity.html
@@ -6,33 +6,33 @@ comments: true
 id: page-32
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_serendipity.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 32 Serendipity face oil</h1>
-                <h3>Lugnande näringsrikt ansiktsoljeserum. Avstressar och återuppbygger känslig och mogen hud.<br>Droppflaska, 30ml.</h3>
-                <h1 class="pris">25,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 240 kr.</p>
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Good fortune comes with a blessing</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
+<article class="padding grey">
+    <header><h1 class="pt-3">No 32 Serendipity face oil</h1></header>
+                <p>Lugnande näringsrikt ansiktsoljeserum. Avstressar och återuppbygger känslig och mogen hud.<br>Droppflaska, 30ml.</p>
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="img-fluid" src="/img/DrHardmans_No32_Serendipity_Face_Oil.png" alt="Dr Hardman No 32 Serendipity face oil"/>
+                </div>
+                <div class="flip-card-back">
+                    <img class="img-fluid" src="/img/DrHardmans_No32_Serendipity_Face_Oil.png" alt="Dr Hardman No 32 Serendipity face oil"/>
+                </div>
+            </div>
+        </div>
+    </figure>
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
+    <h1 class="pris">25,00 € *</h1>
+                <p class="small">* Rekopris. I Sverige 240 kr.</p>
 
-                    <h4>STÖDER:</h4>
+
+                    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
+
+                    <h3>STÖDER</h3>
                     <ul class="ingredienslista">
                         <li>Hudcellernas normala återbildning</li>
                         <li>Kollagenproduktion</li>
@@ -44,52 +44,36 @@ id: page-32
                         <li>Lugnande doft</li>
                         <li>VEGAN</li>
 
-
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
-                        <a href="/ingredienser">avokado-olja,</a>
-                        <a href="/ingredienser">persikokärneolja,</a>
-                        <a href="/ingredienser">ricinolja,</a>
-                        <a href="/ingredienser">vindruvskärneolja,</a>
-                        <a href="/ingredienser">jättenattljusolja°</a>
-                        <a href="/ingredienser">moringa olja*</a>
-                        <a href="/ingredienser">gurkkärneolja,</a>
-                        <a href="/ingredienser">oliv squalen,</a>
-                        <a href="/ingredienser">kokosolja°</a>
-                        <a href="/ingredienser">aloe vera°</a>
-                        <a href="/ingredienser">gurkörtsolja°</a>
-                        <a href="/ingredienser">vitamin E,</a>
-                        <a href="/ingredienser">ros, rosmarin, mandarin och pelargon eteriska oljor</a>
+                     avokado-olja,
+                       persikokärneolja,
+                       ricinolja,
+                        vindruvskärneolja,
+                       jättenattljusolja°
+                       moringa olja*
+                        gurkkärneolja,
+                       oliv squalen,
+                        kokosolja°
+                       aloe vera°
+                        gurkörtsolja°
+                      ros, rosmarin, mandarin och pelargon eteriska oljor
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
 
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten:</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans Serendipity Face Oil är ingen vanlig hudolja utan ett koncentrerat olje-serum. Avstressar och återuppbygger känslig och mogen hud.</p>
                 <p>Våra ansiktsoljor skapades för att ge näring åt huden samtidigt som de motverkar specifika problem. Våra vegetabiliska serum är sammansatta av oljor och organiska botaniska extrakt av högsta kvalitet. Serumet ger huden en kraftfull dos av näringsämnen och vitaminer och doftar ljuvligt gott.
                     <br>Applicera på rengjort ansikte och hals morgon och kväll, eller vid behov.</p>
                 <p>Läs mer om fytoaromatiska ansiktsoljor på sidan <a href="/braattveta#phytoboosters">bra att veta: fytoaromatiska oljor.</a></p>
-                <p><strong>Dr Hardmans andra, liknande produkter:</strong>
-                    <br><a href="/clarified">No 30 Clarified</a>
+                <h4>Dr Hardmans andra, liknande produkter:</h4>
+                    <p><a href="/clarified">No 30 Clarified</a>
                     <br><a href="/youthfulglow">No 31 Youthful Glow</a>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
+                </p>
