--- a/clarified.html
+++ b/clarified.html
@@ -5,34 +5,35 @@ title: Clarified Face Oil
 comments: true
 id: page-30
 ---
-
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/Burk_clarified_pict500.png" alt="drhardman clarified face oil">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 30 Clarified face oil</h1>
-                <h3>Balanserande ansiktsoljeserum för en ren och klar hy.<br>Droppflaska, 30ml.</h3>
-                <h1 class="pris">25,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 240 kr.</p>
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Goodbye to black&shy;heads!</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
 
-                    <h4>STÖDER:</h4>
+<article class="padding grey">
+    <header><h1 class="pt-3">No 30 Clarified face oil</h1></header>
+                <p>Balanserande ansiktsoljeserum för en ren och klar hy.<br>Droppflaska, 30ml.</p>
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="img-fluid" src="/img/DrHardmans_No30_Clarified_Face_Oil.png" alt="drhardman clarified face oil">
+                </div>
+                <div class="flip-card-back">
+                    <img class="img-fluid" src="/img/DrHardmans_No30_Clarified_Face_Oil.png" alt="drhardman clarified face oil">
+                </div>
+            </div>
+        </div>
+    </figure>
+
+                <h2 class="pris">25,00 € *</h2>
+                <p class="small">* Rekopris. I Sverige 240 kr.</p>
+
+
+                    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
+
+                    <h3>STÖDER</h3>
                     <ul class="ingredienslista">
                         <li>Hudcellernas normala återbildning</li>
                         <li>Sebumproduktion</li>
@@ -45,49 +46,33 @@ id: page-30
                         <li>VEGAN</li>
 
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
 
-                        <a href="/ingredienser">persikokärneolja</a>
-                        <a href="/ingredienser">vindruvskärneolja</a>
-                        <a href="/ingredienser">jojobaolja</a>
-                        <a href="/ingredienser">melonkärneolja</a>
-                        <a href="/ingredienser"><i>Camellia sinensis</i> (grönt te) fröolja°</a>
-                        <a href="/ingredienser">vetegroddsolja°</a>
-                        <a href="/ingredienser">tranbärsolja°</a>
-                        <a href="/ingredienser">oliv squalen°</a>
-                        <a href="/ingredienser">havtornsolja°</a>
-                        <a href="/ingredienser">frankinsence° och pepparmynta° eteriska oljor</a>
-                        <a href="/ingredienser">vitamin E</a>
+                       persikokärneolja,
+                       vindruvskärneolja,
+                        jojobaolja°
+                        melonkärneolja,
+                        <i>Camellia sinensis</i> (grönt te) fröolja°
+                        vetegroddsolja°
+                       tranbärsolja°
+                        oliv squalen°
+                        havtornsolja°
+                     frankinsence° och pepparmynta° eteriska oljor
+                        vitamin E
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans Clarified Face Oil är ingen vanlig hudolja utan ett koncentrerat olje-serum. Ansiktsoljorna skapades för att ge näring åt huden samtidigt som de motverkar specifika problem. Våra vegetabiliska serum är sammansatta av oljor och organiska botaniska extrakt av högsta kvalitet. Serumet ger huden en kraftfull dos av näringsämnen och vitaminer och doftar ljuvligt gott.
                     <br>Applicera på rengjort ansikte och hals morgon och kväll, eller vid behov.</p>
                 <p>Läs mer om fytoaromatiska ansiktsoljor på sidan <a href="/braattveta#phytoboosters">bra att veta: fytoaromatiska oljor.</a></p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/youthfulglow">No 31 Youthful Glow</a>
+                <h4>Dr Hardmans liknande produkter</h4>
+                    <p><a href="/youthfulglow">No 31 Youthful Glow</a>
                     <br><a href="/serendipity">No 32 Serendipity</a>
                     </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
