--- a/lipbalm.html
+++ b/lipbalm.html
@@ -5,34 +5,33 @@ title: Lip Balm
 comments: true
 id: page-70
 ---
-
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/BBlappomada500.png">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 70 Vanilla-Choko Lip Balm</h1>
-                <h3>Vanilj och choklad&shy;doftande vårdande läppomada<br>Stift, 6ml.</h3>
-                <h1 class="pris">3,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 30 kr.</p>
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">The scent of a cookie jar, sweet sweet choko!</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
+<article class="padding grey">
+    <header><h1 class="pt-3">No 70 Vanilla-Choko Lip Balm</h1></header>
+                <p>Vanilj och choklad&shy;doftande vårdande läppomada<br>Stift, 6ml.</p>
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="img-fluid" src="/img/DrHardmans_No70_Vanilla_Choko_Lip_Balm.png" alt="Dr Hardman No 70 Vanilla-Choko Lip Balm"/>
+                </div>
+                <div class="flip-card-back">
+                    <img class="img-fluid" src="/img/DrHardmans_No70_Vanilla_Choko_Lip_Balm.png" alt="Dr Hardman No 70 Vanilla-Choko Lip Balm"/>
+                </div>
+            </div>
+        </div>
+    </figure>
 
-                    <h4>BRA FÖR:</h4>
+                <h1 class="pris">3,00 € *</h1>
+                <p class="small">* Rekopris. I Sverige 30 kr.</p>
+
+                    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
+
+                    <h3>BRA FÖR</h3>
                     <ul class="ingredienslista">
                         <li>Hudcellernas normala återbildning</li>
                         <li>Torra läppar</li>
@@ -45,46 +44,29 @@ id: page-70
                         <li>Ingen smak</li>
 
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER</h3>
                     <p>
-                        <a href="/ingredienser">kakaosmör°*<sup>◆</sup></a>
-                        <a href="/ingredienser">kokosolja°*<sup>◆</sup></a>
-                        <a href="/ingredienser">bivax°*<sup>◆</sup></a>
-                        <a href="/ingredienser">ricinolja°</a>
-                        <a href="/ingredienser">lanolin°</a>
-                        <a href="/ingredienser">vanilj CO<sup>2</sup> extrakt,</a>
-                        <a href="/ingredienser">vitamin E</a>
+                        kakaosmör°*<sup>◆</sup>
+                    kokosolja°*<sup>◆</sup>
+                      bivax°*<sup>◆</sup>
+                    ricinolja°
+                    lanolin°
+                     vanilj CO<sup>2</sup> extrakt,
+                     vitamin E
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Dr Hardmans läppomada säljs numera enbart som stift emedan de är mer hygieniska och lättare att breda på. Med Dr Harmans läppomada behöver du inte oroa dig över att du äter en del av ditt läppfett. Alla ingredienser är ätbara! Kakaosmöret är samma som används i choklad och andra livsmedel, liksom vaniljoljan. Ricinolja och lanolin = (fårfett) samt vitamin E är också ätligt, om än inte rekommenderat som föda.
                 <br>Kasta petrolater och parabener! Njut av ren mat för dina läppar med skyddande och närande ingredienser.</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/lipbalmvitamin">No 71 Vitamin Tangerine Lip Balm</a>
+                <h4>Dr Hardmans liknande produkter</h4>
+                    <p><a href="/lipbalmvitamin">No 71 Vitamin Lip Balm läppomada</a>
                     <br><a href="/pawsandclawsraw">No 47 Paws and Claws hand- och fotkräm utan dofttillsatser</a>
                     <br><a href="/pawsandclawslavender">No 48 Paws and Claws hand och fotkräm med doft av lavendel och ylang ylang</a>
                     <br><a href="/pawsandclawsvanilla">No 48 Paws and Claws vanilj- och apelsindoftande hand- och fotkräm</a>
                 </p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
