--- a/youthfulglow.html
+++ b/youthfulglow.html
@@ -6,7 +6,7 @@ comments: true
 id: page-31
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
-    <h1 class="slogan text-center">Swim with me! <br> I feel like a dip in the sea.</h1>
+    <h1 class="slogan text-center">Swim with me! <br> I fancy a dip in the sea</h1>
 
 </section>
 <article class="padding grey">
