--- a/no24-cocoabodybutter.html
+++ b/no24-cocoabodybutter.html
@@ -68,5 +68,5 @@ id: page-24
     <br><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
     <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
     <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a>
-    <br><a href="/rosebodybutter">No 26 Rose Body Butter</a>
+    <br><a href="/no26-rosebodybutter">No 26 Rose Body Butter</a>
     </p>
