--- a/no26-rosebodybutter.html
+++ b/no26-rosebodybutter.html
@@ -76,7 +76,7 @@ id: page-26
                     <br><a href="/no22-calmingsheabodybutter">No 22 Calming Shea Body Butter</a>
                     <br><a href="/no23-citrusbodybutter">No 23 Citrus Body Butter</a>
                     <br><a href="/no24-cocoabodybutter">No 24 Cocoa Body Butter</a>
-                    <br><a href="/mangobodybutter">No 25 Mango Body Butter</a></p>
+                    <br><a href="/no25-mangobodybutter">No 25 Mango Body Butter</a></p>
                 </p>
                 <div
                         class="fb-like"
