file name changes

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ id: page-1
                 <p>Monoi<br>Lotion</p>
             </div>
             <div class="flip-card-back">
-                <a href="/monoilotion">
+                <a href="/no45-monoilotion">
                     <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No45_Monoi_Lotion.png"
                          alt="Dr Hardman No. 45 Monoi Lotion">
                 </a>
@@ -174,7 +174,7 @@ id: page-1
                 <p>Paws and Claws<br>Raw</p>
             </div>
             <div class="flip-card-back">
-                <a href="/pawsandclawsraw">
+                <a href="/no47-pawsandclawsraw">
                     <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No47_Paws_and_Claws_Hand_Cream.png"
                          alt="Dr Hardman No.47 Hand Cream Paws and Claws Raw">
                 </a>
@@ -188,7 +188,7 @@ id: page-1
                 <p>Paws and Claws<br>Lavender</p>
             </div>
             <div class="flip-card-back">
-                <a href="/pawsandclawslavender">
+                <a href="/no48-pawsandclawslavender">
                     <img class="img-fluid mx-auto pb-3"
                          src="/img/DrHardmans_No48_Paws_and_Claws_Lavender_Hand_Cream.png"
                          alt="Dr Hardman No.48 Hand Cream Paws and Claws Lavender">
@@ -203,7 +203,7 @@ id: page-1
                 <p>Paws and Claws<br>Vanilla-Orange</p>
             </div>
             <div class="flip-card-back">
-                <a href="/pawsandclawsvanilla">
+                <a href="/no49-pawsandclawsorangevanilla">
                     <img class="img-fluid mx-auto pb-3"
                          src="/img/DrHardmans_No49_Paws_and_Claws_Vanilla_Orange_Hand_Cream.png"
                          alt="Dr Hardman No.49 Hand Cream Paws and Claws Vanilla-orange">
