snow-js settings in separate _includes + more pages fixed

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ id: page-1
                 <p>Age Defence <br>Cream</p>
             </div>
             <div class="flip-card-back">
-                <a href="/no44-age-defence">
+                <a href="/no44-agedefencecream">
                     <img class="img-fluid mx-auto pb-3" src="/img/DrHardmans_No44_Age_Defence_Cream.png"
                          alt="Dr Hardman No.44 Age Defence Face Cream">
                 </a>
