--- a/no45-monoilotion.html
+++ b/no45-monoilotion.html
@@ -4,6 +4,7 @@ type: produkter
 title: Monoi Lotion
 comments: true
 id: page-45
+tag: yellow
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">Bermuda, Bahamas, come on pretty mama!</h1>
@@ -11,7 +12,7 @@ id: page-45
 
 <article class="padding grey">
     <header><h1>No 45 Monoi Lotion</h1></header>
-                <h3>Fräsh dagcreme i tub med helande egenskaper från gardenian samt antioxidanter från röda frukter.<br>Tub med flipkork, 30ml.</h3>
+                <h3>Fräsh dagcreme i tub med helande egenskaper från gardenia samt antioxidanter från röda frukter.<br>Tub med flipkork, 30ml.</h3>
 
     <figure class="produktkort-singel">
         <div class="flip-card">
@@ -42,7 +43,7 @@ id: page-45
                     </ul>
                     <h3>INGREDIENSER</h3>
                     <p>
-                         sheasmör°*<sup>◆</sup></a>
+                         sheasmör°*<sup>◆</sup>
                          avokadosmör,
                          kokosolja°*<sup>◆</sup>
                          vindruvskärneolja,
@@ -64,13 +65,13 @@ id: page-45
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                <h2 class="om">Om denhär produkten:</h2>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>Monoi betyder "söt doftande olja" på Mahoi, som talas på de Polynesiska öarna. Traditionellt är Monoi-oljan en blandning av kokosolja och tiare extrakt. Tiare är extrakt av blommorna från den lilla busken Gardenia tahitensis, som också kallas "tiare Tahiti". Blomman har sex vita kronblad och busken blommar årligen. Monoi-oljan är känd för sina helande egenskaper.</p>
                     <p>Dr Hardmans Monoi lotion har en trevlig lätt blomdoft (från gardenian) med toner av hallon och kokos.
                 <br>En fräsh dagcreme i tub för gammal som ung med helande egenskaper från gardenian samt antioxidanter från röda frukter. Passar också lite fetare hy.</p>
-                <h4>Dr Hardmans liknande produkter:</h4>
-                    <p><a href="/no44-agedefence">No 44 Age Defence Cream ansiktssalva i burk</a>
+                <h4>Dr Hardmans liknande produkter</h4>
+                    <p><a href="/no44-agedefencecream">No 44 Age Defence Cream ansiktssalva i burk</a>
                     <br><a href="/no47-pawsandclawsraw">No 47 Claws and Paws hand- och fotkräm utan dofttillsats</a>
                     <br><a href="/no48-pawsandclawslavender">No 48 Claws and Paws hand- och fotkräm med lavendel och ylang ylang</a>
                     <br><a href="/no49-pawsandclawsorangevanilla">No 49 Claws and Paws hand- och fotkräm med vanilj och apelsindoft</a>
