--- a/no47-pawsandclawsraw.html
+++ b/no47-pawsandclawsraw.html
@@ -4,78 +4,68 @@ type: produkter
 title: Paws and Claws Raw
 comments: true
 id: page-47
+tag: white
 ---
-
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No47_Paws_and_Claws_Hand_Cream.png" alt="Paws and Claws handkräm">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="pt-3">No 47 Paws and Claws Raw</h1>
-                <h3>En stadig kräm för händer, fötter och nagelband. Inga tillsatta doftoljor.<br>Burk, 100ml</h3>
-                <h1 class="pris">15,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 140 kr.</p>
-            </div>
-        </div>
-    </div>
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">Share, or I'll lick it off!!</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
-                    <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
-
-                    <h4>BRA FÖR:</h4>
-                    <ul class="ingredienslista">
-                        <li>Torr hud</li>
-                        <li>Förhårdnader</li>
-                        <li>Hudsprickor</li>
-                        <li>Spruckna nagelband</li>
-                        <li>Antiseptiska egenskaper</li>
-                        <li>Skråmor, småsår</li>
-                        <li>Vård av vattenblåsor</li>
-                        <li>Vård av husdjurs trampdynor</li>
-                        <li>Doftallergiker</li>
-                        <li>VEGAN</li>
-
-                    </ul>
-                    <h4>INGREDIENSER:</h4>
-                    <p>
-                        <a href="/ingredienser">sheasmör°*<sup>◆</sup></a>
-                        <a  href="/ingredienser">arganolja°</a>
-                    </p>
-
-                    <p>° Ekologisk
-                        <br>* Rättvis handel
-                        <br><sup>◆</sup> Oraffinerad (raw) råvara
-                    </p>
-
+<article class="padding grey">
+    <header><h1>No 47 Paws and Claws Raw</h1></header>
+    <p>En stadig kräm för händer, fötter och nagelband. Inga tillsatta doftoljor.<br>Burk, 100ml</p>
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="img-fluid" src="/img/DrHardmans_No47_Paws_and_Claws_Hand_Cream.png"
+                         alt="Paws and Claws handkräm">
                 </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
-                <hr class="primary" />
-                <p>En dryg hand och fotkräm utan tillsatta doftoljor som suger snabbt in i huden och lämnar den mjuk och len och inte ett dugg oljig. Mjukar upp förhårdnader vid daglig användning. Perfekt för sprucken hud och spruckna nagelband. Svagt antiseptisk, passar också för vård av små sår, skråmor och vattenblåsor. Rik på vitamin E. Perfekt för den som inte tål doftoljor. Paws and Claws Raw passar även för husdjurens trampdynor som på vintern tar skada av snö, is och saltade vägar. Paws and Claws Raw är ok att slicka i sig!</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/pawsandclawslavender">No 48 Paws and Claws Lavender</a>
-                    <br><a href="/pawsandclawsvanilla">No 49 Paws and Claws Vanilla-Orange</a></p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
+                <div class="flip-card-back">
+                    <img class="img-fluid" src="/img/DrHardmans_No47_Paws_and_Claws_Hand_Cream.png"
+                         alt="Paws and Claws handkräm">
                 </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
             </div>
         </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
+    </figure>
+
+    <h1 class="pris">15,00 € *</h1>
+    <p class="small">* Rekopris. I Sverige 140 kr.</p>
+
+    <h2 class="faktarutarubrik">Snabb&shy;fakta</h2>
+
+    <h3>BRA FÖR</h3>
+    <ul class="ingredienslista">
+        <li>Torr hud</li>
+        <li>Förhårdnader</li>
+        <li>Hudsprickor</li>
+        <li>Spruckna nagelband</li>
+        <li>Antiseptiska egenskaper</li>
+        <li>Skråmor, småsår</li>
+        <li>Vård av vattenblåsor</li>
+        <li>Vård av husdjurs trampdynor</li>
+        <li>Doftallergiker</li>
+        <li>VEGAN</li>
+
+    </ul>
+    <h3>INGREDIENSER</h3>
+    <p>
+        sheasmör°*<sup>◆</sup> och arganolja°
+    </p>
+
+    <p class="small">° Ekologisk
+        <br>* Rättvis handel
+        <br><sup>◆</sup> Oraffinerad (raw) råvara
+    </p>
+
+    <h2 class="om">Om denhär produkten</h2>
+    <hr class="primary"/>
+    <p>En dryg hand och fotkräm utan tillsatta doftoljor som suger snabbt in i huden och lämnar den mjuk och len och
+        inte ett dugg oljig. Mjukar upp förhårdnader vid daglig användning. Perfekt för sprucken hud och spruckna
+        nagelband. Svagt antiseptisk, passar också för vård av små sår, skråmor och vattenblåsor. Rik på vitamin E.
+        Perfekt för den som inte tål doftoljor. Paws and Claws Raw passar även för husdjurens trampdynor som på vintern
+        tar skada av snö, is och saltade vägar. Paws and Claws Raw är ok att slicka i sig!</p>
+    <h4>Dr Hardmans liknande produkter:</h4>
+    <p><a href="/no48-pawsandclawslavender">No 48 Paws and Claws Lavender</a>
+        <br><a href="/no49-pawsandclawsorangevanilla">No 49 Paws and Claws Vanilla-Orange</a>
+    </p>
