--- a/pitstopregular.html
+++ b/pitstopregular.html
@@ -4,6 +4,7 @@ type: produkter
 title: Pit Stop Regular
 comments: true
 id: page-10
+tag: blue
 ---
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">Naturally, it won't sting!!!</h1>
