koostesivut initiated on front page

--- a/no45-monoilotion.html
+++ b/no45-monoilotion.html
@@ -4,15 +4,16 @@ type: produkter
 title: Monoi Lotion
 comments: true
 id: page-45
-tag: yellow
+tag: none
 ---
+
 <section class="dubbelpadding sloganbox" id="sloganbox10">
     <h1 class="slogan text-center">Bermuda, Bahamas, come on pretty mama!</h1>
 </section>
 
 <article class="padding grey">
     <header><h1>No 45 Monoi Lotion</h1></header>
-                <h3>Fräsh dagcreme i tub med helande egenskaper från gardenia samt antioxidanter från röda frukter.<br>Tub med flipkork, 30ml.</h3>
+                <p>Fräsh dagcreme i tub med helande egenskaper från gardenia samt antioxidanter från röda frukter.<br>Tub med flipkork, 30ml.</p>
 
     <figure class="produktkort-singel">
         <div class="flip-card">
