--- a/no47-pawsandclawsraw.html
+++ b/no47-pawsandclawsraw.html
@@ -6,14 +6,14 @@ comments: true
 id: page-47
 tag: white
 ---
-<section class="dubbelpadding sloganbox" id="sloganbox10">
+<section class="dubbelpadding sloganbox" id="sloganboxindex">
     <h1 class="slogan text-center">Share, or I'll lick it off!!</h1>
 </section>
 
-
 <article class="padding grey">
-    <header><h1>No 47 Paws and Claws Raw</h1></header>
-    <p>En stadig kräm för händer, fötter och nagelband. Inga tillsatta doftoljor.<br>Burk, 100ml</p>
+    <header><h1 class="om">No 47 Paws and Claws Raw</h1></header>
+    <hr class="primary"/>
+    <p>En stadig kräm för händer, fötter och nagelband. Inga tillsatta doftoljor. Passar också husdjur!<br>Burk, 100ml</p>
     <figure class="produktkort-singel">
         <div class="flip-card">
             <div class="flip-card-inner">
@@ -64,7 +64,7 @@ tag: white
         inte ett dugg oljig. Mjukar upp förhårdnader vid daglig användning. Perfekt för sprucken hud och spruckna
         nagelband. Svagt antiseptisk, passar också för vård av små sår, skråmor och vattenblåsor. Rik på vitamin E.
         Perfekt för den som inte tål doftoljor. Paws and Claws Raw passar även för husdjurens trampdynor som på vintern
-        tar skada av snö, is och saltade vägar. Paws and Claws Raw är ok att slicka i sig!</p>
+        tar skada av snö, is och saltade vägar. Paws and Claws Raw är helt okej att slicka i sig!</p>
     <h4>Dr Hardmans liknande produkter:</h4>
     <p><a href="/no48-pawsandclawslavender">No 48 Paws and Claws Lavender</a>
         <br><a href="/no49-pawsandclawsorangevanilla">No 49 Paws and Claws Vanilla-Orange</a>
