--- a/no48-pawsandclawslavender.html
+++ b/no48-pawsandclawslavender.html
@@ -4,35 +4,41 @@ type: produkter
 title: Paws and Claws Lavender
 comments: true
 id: page-48
+tag: pink
 ---
 
-<section class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 offset-lg-1">
-                <img class="img-fluid mx-auto produktprofilbild" src="/img/DrHardmans_No48_Paws_and_Claws_Lavender_Hand_Cream.png" alt="Paws and Claws handkräm">
-            </div>
-            <div class="col-lg-6">
-               <h1 class="pt-3">No 48 Paws and Claws Lavender</h1>
-                <h3>En dryg kräm för händer, fötter och nagelband med doft av lavendel och ylang ylang.<br>Burk, 100ml</h3>
-                <h1 class="pris">15,00 € *</h1>
-                <p class="small">* Rekopris. I Sverige 140 kr.</p>
-            </div>
-        </div>
-    </div>
+
+
+<section class="dubbelpadding sloganbox" id="sloganbox10">
+    <h1 class="slogan text-center">The stuff sweet dreams are made of</h1>
 </section>
 
-<section class="light-bg">
-    <div class="texture-border-top">
-    </div>
-    <div class="container pt-5 pb-4">
-        <div class="row">
 
-            <div class="col-lg-4 offset-lg-1 pb-3">
-                <div class="faktaruta">
+
+<article class="padding grey">
+    <header><h1>No 48 Paws and Claws Lavender</h1></header>
+                <p>En dryg kräm för händer, fötter och nagelband med doft av lavendel och ylang ylang.<br>Burk, 100ml</p>
+
+    <figure class="produktkort-singel">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img class="img-fluid" src="/img/DrHardmans_No48_Paws_and_Claws_Lavender_Hand_Cream.png" alt="Paws and Claws handkräm">
+                </div>
+                <div class="flip-card-back">
+                    <img class="img-fluid" src="/img/DrHardmans_No48_Paws_and_Claws_Lavender_Hand_Cream.png" alt="Paws and Claws handkräm">
+                </div>
+            </div>
+        </div>
+    </figure>
+                <h1 class="pris">15,00 € *</h1>
+                <p class="small">* Rekopris. I Sverige 140 kr.</p>
+
+
+
                     <h1 class="faktarutarubrik">Snabb&shy;fakta</h1>
 
-                    <h4>BRA FÖR:</h4>
+                    <h3>BRA FÖR</h3>
                     <ul class="ingredienslista">
                         <li>Torr hud</li>
                         <li>Förhårdnader</li>
@@ -44,38 +50,22 @@ id: page-48
                         <li>VEGAN</li>
 
                     </ul>
-                    <h4>INGREDIENSER:</h4>
+                    <h3>INGREDIENSER:</h3>
                     <p>
-                        <a href="/ingredienser">sheasmör°*<sup>◆</sup></a>
-                        <a  href="/ingredienser">arganolja°</a>
-                        <a  href="/ingredienser">lavendel eterisk olja°</a>
-                        <a  href="/ingredienser">ylang ylang eterisk olja°</a>
+                       sheasmör°*<sup>◆</sup>
+                        arganolja°
+                       lavendel eterisk olja°
+                       ylang ylang eterisk olja°
                     </p>
 
-                    <p>° Ekologisk
+                    <p class="small">° Ekologisk
                         <br>* Rättvis handel
                         <br><sup>◆</sup> Oraffinerad (raw) råvara
                     </p>
 
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <h1>Om denhär produkten:</h1>
+                <h2 class="om">Om denhär produkten</h2>
                 <hr class="primary" />
                 <p>En dryg lavendeldoftande hand- och fotkräm som suger snabbt in i huden och lämnar den mjuk och len och inte ett dugg oljig. Mjukar upp förhårdnader vid daglig användning. Perfekt för sprucken hud och spruckna nagelband. Svagt antiseptisk, passar också för vård av små sår, skråmor och vattenblåsor. Rik på vitamin E. Vill man använda den på sin hunds trampdynor eller är överkänslig för eteriska oljor/dofter så ta versionen utan eteriska oljor, <a href="/pawsandclawsraw">No. 47 Dr Hardman's Paws and Claws Raw</a>. -Den är ok att slicka i sig!</p>
-                <p><strong>Dr Hardmans liknande produkter:</strong>
-                    <br><a href="/no47-pawsandclawsraw">No 47 Paws and Claws Raw</a>
+    <h4>Dr Hardmans liknande produkter:</h4>
+                    <p><a href="/no47-pawsandclawsraw">No 47 Paws and Claws Raw</a>
                     <br><a href="/no49-pawsandclawsorangevanilla">No 49 Paws and Claws Vanilla-Orange</a></p>
-                <div
-                        class="fb-like"
-                        data-share="true"
-                        data-width="450"
-                        data-show-faces="true">
-                </div>
-                <a class="up pull-right" href="#page-top"><i class="fa fa-angle-double-up" aria-hidden="true"></i> Upp</a>
-            </div>
-        </div>
-    </div>
-    <div class="texture-border-bottom"></div>
-</section>
